kubernetes/k3s/1-gateway-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ithust-gateway-ingress
  namespace: production
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  defaultBackend:
    service:
      name: ithust-gateway
      port:
        number: 4000
  tls:
    - hosts:
        - ithust.store
  rules:
    - host: ithust.store
      http:
        paths:
          - path: /api/gateway/v1
            pathType: Prefix
            backend:
              service:
                name: ithust-gateway
                port:
                  number: 4000
